--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.3",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
@@ -61,5 +61,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
