--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "animate.css": "^4.1.1",
+    "homepage": "https://arivanandhan.netlify.app",
     "assert": "^2.1.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
@@ -29,7 +30,6 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.3",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
@@ -63,6 +63,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "react-scripts": "^5.0.1"
   }
 }
